--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,11 +1,9 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: go-querysql-test
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
@@ -21,8 +19,8 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Build
-      run: go build -v ./...
+    - name: Start db
+      run: docker compose -f docker-compose.test.yml up -d
 
     - name: Test
       run: go test -v ./...
